--- a/source/index.html
+++ b/source/index.html
@@ -6,6 +6,9 @@
   <link rel="stylesheet" href="css/styles.css">
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="/js/application.js"></script>
+  <script src="js/src/controller.js"></script>
+  <script src="js/src/models.js"></script>
+  <script src="js/src/view.js"></script>
 
   <title>Colors</title>
 </head>
