--- a/source/index.html
+++ b/source/index.html
@@ -4,11 +4,11 @@
   <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/styles.css">
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script src="/js/application.js"></script>
-  <script src="js/src/controller.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="js/src/models.js"></script>
+  <script src="js/src/controller.js"></script>
   <script src="js/src/view.js"></script>
+  <script src="js/application.js"></script>
 
   <title>Colors</title>
 </head>
