--- a/source/index.html
+++ b/source/index.html
@@ -13,7 +13,7 @@
   <title>Colors</title>
 </head>
 <body>
-  <button id="clear">Clear</button>
+  <!-- <button id="clear">Clear</button> -->
 
   <!-- <form action="/save" method="post">
     <label for="name">Title: </label>
