--- a/source/index.html
+++ b/source/index.html
@@ -13,13 +13,8 @@
   <title>Colors</title>
 </head>
 <body>
-  <!-- <button id="clear">Clear</button> -->
-
-  <!-- <form action="/save" method="post">
-    <label for="name">Title: </label>
-    <input type="text" name="name">
-    <input type="submit" id="save" value="Save">
-  </form> -->
+  <button class="clear">Clear</button>
+  <button class="save">Save</button>
 
   <div class="wrapper">
     <ul>
