--- a/source/index.html
+++ b/source/index.html
@@ -8,11 +8,13 @@
   <script src="js/src/models.js"></script>
   <script src="js/src/controller.js"></script>
   <script src="js/src/view.js"></script>
+  <script src="js/src/binder.js"></script>
   <script src="js/application.js"></script>
 
   <title>Colors</title>
 </head>
 <body>
+  <button class="new">Make New Grid</button>
   <button class="clear">Clear</button>
   <button class="save">Save</button>
 
