Adds input form for naming the saved grids.

--- a/source/index.html
+++ b/source/index.html
@@ -17,6 +17,13 @@
   <button class="clear">Clear</button>
   <button class="save">Save</button>
 
+  <form>
+    Save State Title: <input type="text" id="formValueID" name="nombre">
+    <input type="submit" id="submitButton" value="Submit">
+  </form>
+
+
+
   <div class="wrapper">
     <ul>
 
