Final styling for chrome browser, fixed width, perdy.

--- a/source/index.html
+++ b/source/index.html
@@ -14,25 +14,28 @@
   <title>Colors</title>
 </head>
 <body>
-  <button class="clear">Clear</button>
-  <button class="save">Save</button>
+<div class="wrapper">
+  <div class="header">
+
+    <div class="logo">
+      <h1>Colors</h1>
+    </div>
+
+    <button class="clear">Clear</button>
+    <button class="save">Save</button>
+  </div>
 
   <form>
-    Save State Title: <input type="text" id="formValueID" name="nombre">
-    <input type="submit" id="submitButton" value="Submit">
+    <input type="text" id="formValueID" name="nombre" placeholder="Grid Title">
+    <input type="submit" id="submitButton" value="Save Grid">
   </form>
 
-
-
-  <div class="wrapper">
+  <div class="grid">
     <ul>
 
     </ul>
   </div>
-
-  <div class="logo">
-    <h1>Colors</h1>
-  </div>
+</div>
 
 </body>
 </html>
