--- a/source/index.html
+++ b/source/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <div class="wrapper">
-  <div class="header">
+  <header>
 
     <div class="logo">
       <h1>Colors</h1>
@@ -28,7 +28,7 @@
     </form>
 
 
-  </div>
+  </header>
 
   <div class="default-grid">
     <ul>
