Fixes styling of titles of saved grids.

--- a/source/index.html
+++ b/source/index.html
@@ -22,7 +22,7 @@
     </div>
 
     <form>
-      <input type="text" id="formValueID" name="nombre" placeholder="Grid Title">
+      <input type="text" id="formValueID" name="nombre" placeholder="Grid Title" maxlength="18">
       <input type="submit" id="submitButton" value="Save Grid">
       <button class="clear">Clear</button>
     </form>
